Readme edited, comments removed