@@ -10,51 +10,49 @@ import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+
+
 public class Week1 {
+    
+    private static void println(Object s) {
+        System.out.println(s);
+    }
 
     public static void main(String[] args) {
-
-        System.out.println(Arrays.toString(sortEvenOdd(new int[]{4, 1, 2, 3})));
+        println(Arrays.toString(sortEvenOdd(new int[]{4, 1, 2, 3})));
 
         Result.plusMinus(List.of(1, 1, 0, -1, -1));
         Result.plusMinus(List.of(-4, 3, -9, 0, 4, 1));
-        System.out.println("-----------------------------------------");
+        println("-----------------------------------------");
         miniMaxSum(List.of(1, 2, 3, 4, 5));
         miniMaxSum(List.of(1, 3, 5, 7, 9));
         miniMaxSum(List.of(256741038, 623958417, 467905213, 714532089, 938071625));
-        System.out.println("-----------------------------------------");
-        System.out.println("12:00:00AM => " + timeConversion("12:00:00AM"));
-        System.out.println("12:00:00PM => " + timeConversion("12:00:00PM"));
-        System.out.println("12:01:00PM => " + timeConversion("12:01:00PM"));
-        System.out.println("12:01:00AM => " + timeConversion("12:01:00AM"));
-        System.out.println("07:05:45PM => " + timeConversion("07:05:45PM"));
-        System.out.println("06:40:03AM => " + timeConversion("06:40:03AM"));
-        System.out.println("12:45:54PM => " + timeConversion("12:45:54PM"));
-        System.out.println("-----------------------------------------");
-        System.out.println(breakingRecords(List.of(12, 24, 10, 24)));
-        System.out.println("-----------------------------------------");
-//        Scanner sn = new Scanner(System.in);
-//        while (sn.hasNext()) {
-//            String line = sn.nextLine();
-//            System.out.println("Source" + line);
-//            printTransformed(line);
-//        }
-        System.out.println("-----------------------------------------");
-        System.out.println(divisibleSumPairs(6, 5, List.of(1, 2, 3, 4, 5, 6)));
-        System.out.println(divisibleSumPairs(6, 3, List.of(1, 3, 2, 6, 1, 2)));
-        System.out.println("-----------------------------------------");
-        System.out.println(matchingStrings(List.of("aba", "baba", "aba", "xzxb"), List.of("aba", "xzxb", "ab")));
-        System.out.println("-----------------------------------------");
+        println("-----------------------------------------");
+        println("12:00:00AM => " + timeConversion("12:00:00AM"));
+        println("12:00:00PM => " + timeConversion("12:00:00PM"));
+        println("12:01:00PM => " + timeConversion("12:01:00PM"));
+        println("12:01:00AM => " + timeConversion("12:01:00AM"));
+        println("07:05:45PM => " + timeConversion("07:05:45PM"));
+        println("06:40:03AM => " + timeConversion("06:40:03AM"));
+        println("12:45:54PM => " + timeConversion("12:45:54PM"));
+        println("-----------------------------------------");
+        println(breakingRecords(List.of(12, 24, 10, 24)));
+        println("-----------------------------------------");
+
+        println("-----------------------------------------");
+        println(divisibleSumPairs(6, 5, List.of(1, 2, 3, 4, 5, 6)));
+        println(divisibleSumPairs(6, 3, List.of(1, 3, 2, 6, 1, 2)));
+        println("-----------------------------------------");
+        println(matchingStrings(List.of("aba", "baba", "aba", "xzxb"), List.of("aba", "xzxb", "ab")));
+        println("-----------------------------------------");
         flippingBits();
-        System.out.println("-----------------------------------------");
-        System.out.println(twoArrays(10, Arrays.asList(2, 1, 3), Arrays.asList(7, 8, 9)));
-        System.out.println(twoArrays(5, Arrays.asList(1, 2, 2, 1), Arrays.asList(3, 3, 3, 4)));
-        System.out.println("-----------------------------------------");
-//        xOrString();
-        System.out.println("-----------------------------------------");
-//        System.out.println(maximumPerimeterTriangle(List.of(1, 2, 3)));
-//        System.out.println(maximumPerimeterTriangle(List.of(3, 9, 2, 15, 3)));
-        System.out.println(maximumPerimeterTriangle(Arrays.asList(
+        println("-----------------------------------------");
+        println(twoArrays(10, Arrays.asList(2, 1, 3), Arrays.asList(7, 8, 9)));
+        println(twoArrays(5, Arrays.asList(1, 2, 2, 1), Arrays.asList(3, 3, 3, 4)));
+        println("-----------------------------------------");
+
+        println("-----------------------------------------");
+        println(maximumPerimeterTriangle(Arrays.asList(
                 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000,
                 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000,
                 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000,
@@ -64,120 +62,17 @@ public class Week1 {
                 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000,
                 1000000000
         )));
-        System.out.println("-----------------------------------------");
-        System.out.println(pickingNumbers(Arrays.asList(4, 6, 5, 3, 3, 1)));
-        System.out.println("-----------------------------------------");
-//        separateNumbers("91011");
-//        separateNumbers("99100");
+        println("-----------------------------------------");
+        println(pickingNumbers(Arrays.asList(4, 6, 5, 3, 3, 1)));
+        println("-----------------------------------------");
         separateNumbers("42949672954294967296429496729");
-        System.out.println("-----------------------------------------");
-        System.out.println(minimumNumber(7, "AUzs-nV"));
-        System.out.println("-----------------------------------------");
-//        System.out.println(dynamicArray(100,
-//                Arrays.asList(
-//                Arrays.asList(1, 345255357, 205970905),
-//                Arrays.asList(1, 570256166, 75865401),
-//                Arrays.asList(1, 94777800, 645102173),
-//                Arrays.asList(1, 227496730, 16649450),
-//                Arrays.asList(1, 82987157, 486734305),
-//                Arrays.asList(1, 917920354, 757848208),
-//                Arrays.asList(1, 61379773, 817694251),
-//                Arrays.asList(1, 330547128, 112869154),
-//                Arrays.asList(1, 328743001, 855677723),
-//                Arrays.asList(1, 407951306, 669798718),
-//                Arrays.asList(1, 21506172, 676980108),
-//                Arrays.asList(1, 49911390, 342109400),
-//                Arrays.asList(1, 980306253, 305632965),
-//                Arrays.asList(2, 736380701, 402184046),
-//                Arrays.asList(2, 798108301, 416334323),
-//                Arrays.asList(1, 254839279, 1370035),
-//                Arrays.asList(1, 109701362, 2800586),
-//                Arrays.asList(1, 374257441, 165208824),
-//                Arrays.asList(1, 624259835, 477431250),
-//                Arrays.asList(1, 629066664, 454406245),
-//                Arrays.asList(1, 135821145, 763845832),
-//                Arrays.asList(1, 480298791, 138234911),
-//                Arrays.asList(1, 553575409, 835718837),
-//                Arrays.asList(1, 13022848, 624652920),
-//                Arrays.asList(1, 974893519, 882630870),
-//                Arrays.asList(1, 137832930, 216177975),
-//                Arrays.asList(1, 453349691, 969255659),
-//                Arrays.asList(1, 138396076, 91038209),
-//                Arrays.asList(1, 699822497, 941751038),
-//                Arrays.asList(1, 116800806, 64071662),
-//                Arrays.asList(1, 815273934, 8835809),
-//                Arrays.asList(1, 658534867, 657771609),
-//                Arrays.asList(1, 183760807, 179377441),
-//                Arrays.asList(1, 93984556, 636425656),
-//                Arrays.asList(1, 231506463, 836238924),
-//                Arrays.asList(1, 214074594, 709571211),
-//                Arrays.asList(1, 649641434, 509698468),
-//                Arrays.asList(2, 523656673, 709717705),
-//                Arrays.asList(2, 261443586, 330808140),
-//                Arrays.asList(1, 75924023, 449768243),
-//                Arrays.asList(1, 849537714, 354568873),
-//                Arrays.asList(2, 641743742, 124196560),
-//                Arrays.asList(1, 19829224, 995759639),
-//                Arrays.asList(1, 244389335, 108315212),
-//                Arrays.asList(1, 877758467, 421383626),
-//                Arrays.asList(1, 573278148, 474192994),
-//                Arrays.asList(2, 561031511, 448889978),
-//                Arrays.asList(1, 773294404, 980994962),
-//                Arrays.asList(2, 33088709, 716646168),
-//                Arrays.asList(1, 760927835, 441983538),
-//                Arrays.asList(1, 273540687, 783321829),
-//                Arrays.asList(1, 5933845, 384358662),
-//                Arrays.asList(1, 543628702, 372160176),
-//                Arrays.asList(2, 136400466, 910559291),
-//                Arrays.asList(2, 546568738, 393221347),
-//                Arrays.asList(1, 812227065, 694221123),
-//                Arrays.asList(1, 311065574, 103905420),
-//                Arrays.asList(2, 571344361, 185289590),
-//                Arrays.asList(1, 99638520, 173318136),
-//                Arrays.asList(1, 854060080, 407068012),
-//                Arrays.asList(2, 980658213, 778573744),
-//                Arrays.asList(2, 412539660, 476853104),
-//                Arrays.asList(1, 530145366, 36493537),
-//                Arrays.asList(1, 604875364, 100141497),
-//                Arrays.asList(2, 650812104, 64817757),
-//                Arrays.asList(1, 141060009, 766603553),
-//                Arrays.asList(1, 598398952, 418245941),
-//                Arrays.asList(1, 262344011, 431865586),
-//                Arrays.asList(2, 56413893, 546484833),
-//                Arrays.asList(1, 400736735, 673588153),
-//                Arrays.asList(1, 642955232, 803851098),
-//                Arrays.asList(1, 917782037, 935143105),
-//                Arrays.asList(1, 658284524, 745224102),
-//                Arrays.asList(1, 103202288, 501551287),
-//                Arrays.asList(1, 162144918, 12888783),
-//                Arrays.asList(1, 16486753, 67467208),
-//                Arrays.asList(1, 671120703, 941541277),
-//                Arrays.asList(1, 47399694, 77707668),
-//                Arrays.asList(1, 122011395, 946116527),
-//                Arrays.asList(1, 924363862, 886726236),
-//                Arrays.asList(2, 657761235, 540240467),
-//                Arrays.asList(1, 203175991, 279882007),
-//                Arrays.asList(2, 304620923, 162838413),
-//                Arrays.asList(1, 440453449, 117964712),
-//                Arrays.asList(2, 941868853, 887850334),
-//                Arrays.asList(1, 293198923, 466812643),
-//                Arrays.asList(1, 461688477, 532794906),
-//                Arrays.asList(1, 315016797, 733095902),
-//                Arrays.asList(1, 265008751, 913972757),
-//                Arrays.asList(1, 887405255, 139170948),
-//                Arrays.asList(2, 754223230, 426836947),
-//                Arrays.asList(1, 945967814, 852589735),
-//                Arrays.asList(1, 168866283, 309720694),
-//                Arrays.asList(1, 373861145, 94596540),
-//                Arrays.asList(2, 984122495, 20702849),
-//                Arrays.asList(2, 233835636, 180460242),
-//                Arrays.asList(1, 172787631, 643823473),
-//                Arrays.asList(1, 273611372, 616819555),
-//                Arrays.asList(1, 196104599, 690080895),
-//                Arrays.asList(1, 527554061, 434103342))));
-        System.out.println("-----------------------------------------");
-        System.out.println(sansaXor(Arrays.asList(4, 5, 7, 5)));
-        System.out.println("-----------------------------------------");
+        println("-----------------------------------------");
+        println(minimumNumber(7, "AUzs-nV"));
+        println("-----------------------------------------");
+
+        println("-----------------------------------------");
+        println(sansaXor(Arrays.asList(4, 5, 7, 5)));
+        println("-----------------------------------------");
 
     }
 
@@ -228,7 +123,7 @@ public class Week1 {
      *
      * Use Scanner to read in all information as if it were coming from the keyboard.
      *
-     * Print all information to the console using standard output (System.out.print() or System.out.println()).
+     * Print all information to the console using standard output (print() or println()).
      *
      * Outputs must be exact (exact spaces and casing).
      */
@@ -259,7 +154,7 @@ public class Week1 {
             }
         }
         if (isMethod) sb.append("()");
-        System.out.println(sb.toString());
+        println(sb.toString());
     }
 
     //         String[] words = words.split("(?<!(^|[A-Z]))(?=[A-Z])|(?<!^)(?=[A-Z][a-z])"); через регекс
@@ -273,7 +168,7 @@ public class Week1 {
                 sb.append(Character.toLowerCase(charAt));
             } else sb.append(charAt);
         }
-        System.out.println(sb.toString());
+        println(sb.toString());
     }
 
     /**
@@ -354,9 +249,9 @@ public class Week1 {
                     pos++;
                 } else neg++;
             }
-            System.out.println(BigDecimal.valueOf(pos).divide(size, new MathContext(6, RoundingMode.HALF_UP)));
-            System.out.println(BigDecimal.valueOf(neg).divide(size, new MathContext(6, RoundingMode.HALF_UP)));
-            System.out.println(BigDecimal.valueOf(zer).divide(size, new MathContext(6, RoundingMode.HALF_UP)));
+            println(BigDecimal.valueOf(pos).divide(size, new MathContext(6, RoundingMode.HALF_UP)));
+            println(BigDecimal.valueOf(neg).divide(size, new MathContext(6, RoundingMode.HALF_UP)));
+            println(BigDecimal.valueOf(zer).divide(size, new MathContext(6, RoundingMode.HALF_UP)));
         }
 
     }
@@ -464,7 +359,7 @@ public class Week1 {
             if (num > max) max = num;
         }
 
-        System.out.println(min + " " + max);
+        println(min + " " + max);
     }
 
     /**
@@ -696,29 +591,6 @@ public class Week1 {
         return result;
     }
 
-    /*
-    public static int flippingMatrix(List<List<Integer>> matrix) {
-        int total =
-        List<Integer> max = matrix.stream().flatMap(o -> o.stream()).sorted((o1, o2) -> (o2 - o1))
-        .skip((3 / 4) * (matrix.size() * matrix.get(0).size())).collect(Collectors.toList());
-        int sum = 0;
-        for (Integer o : max) {
-            sum += o;
-        }
-        return sum;
-    }
-
-    private static int getQuarterSum(List<List<Integer>> matrix) {
-        int sum = 0;
-        for (int i = 0; i < matrix.size() / 2; i++) {
-            for (int j = 0; j < matrix.get(0).size() / 2; j++) {
-                sum += matrix.get(i).get(j);
-            }
-        }
-        return sum;
-    }
-     */
-
     public static long flippingBits() {
         long n = 2147483647;
         long parseLong = Long.parseLong(Integer.toBinaryString((int) ~n), 2);
@@ -753,7 +625,7 @@ public class Week1 {
         for (int i = 0; i < line1.length; i++) {
             sb.append(line1[i] ^ line2[i]);
         }
-        System.out.println(sb.toString());
+        println(sb.toString());
     }
 
     public static List<Integer> maximumPerimeterTriangle(List<Integer> sticks) {
@@ -852,7 +724,7 @@ public class Week1 {
 
     public static void separateNumbers(String s) {
         if (s.length() <= 1) {
-            System.out.println("NO");
+            println("NO");
             return;
         }
 
@@ -898,7 +770,7 @@ public class Week1 {
             length++;
         }
 
-        System.out.println(isBeautiful ? "YES " + list.getFirst() : "NO");
+        println(isBeautiful ? "YES " + list.getFirst() : "NO");
     }
 
     public static int minimumNumber(int n, String password) {
@@ -968,7 +840,7 @@ public class Week1 {
                 })
                 .map(i -> i < arr.size() / 2 ? "-" : arr.get(i).get(1))
                 .collect(Collectors.toList());
-        System.out.println(String.join(" ", lst));
+        println(String.join(" ", lst));
     }
     public static void countSort2(List<List<String>> arr) {
         List<String>[] buckets = new List[100];
@@ -1008,7 +880,7 @@ public class Week1 {
         }
         String res = lst.stream().sorted(((o1, o2) -> o1.getKey() - o2.getKey())).map(Map.Entry::getValue)
                 .collect(Collectors.joining(" "));
-        System.out.println(res);
+        println(res);
 
         for (int i = 0; i < arr.size() / 2; i++) arr.get(i).set(1, "-");
         for (int marker = 1; marker < arr.size(); marker++) {
@@ -1045,7 +917,7 @@ public class Week1 {
         }
         String res = lst.stream().sorted(((o1, o2) -> o1.getKey() - o2.getKey())).map(Map.Entry::getValue)
                 .collect(Collectors.joining(" "));
-        System.out.println(res);
+        println(res);
     }
 
     public static int[] sortEvenOdd(int[] nums) {
